--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Kai Wang"
+title                    : "Kai Wang / Ph.D. Student"
 title_separator          : "-"
 name                     : &name "Kai Wang"
 description              : &description "Ph.D. Student at SHI-Labs"
