--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Kai Wang"
   avatar           : "profile.png"
   bio              : "Ph.D. Student@SHI-Labs"
-  location         : "Eugene, OR"
+  location         : "Atlanta, GA"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=_yK8SN0AAAAJ&hl=en"
