--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Kai Wang"
   avatar           : "profile.png"
-  bio              : "Ph.D. Student@SHI-Labs"
+  bio              : "Ph.D. Student@SHI Labs"
   location         : "Atlanta, GA"
   employer         :
   pubmed           : 
