--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ author:
   location         : "Atlanta, GA"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=_yK8SN0AAAAJ&hl=en"
-  email            : "kk94wang@gmail.com"
+  googlescholar    : "https://scholar.google.com/citations?user=_yK8SN0AAAAJ"
+  email            : 
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
