--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Kai Wang"
-  avatar           : "profile.png"
+  avatar           : "profile2.png"
   bio              : "Ph.D. Student@SHI Labs"
   location         : "Atlanta, GA"
   employer         :
